force-app/main/default/objects/CLQ_Enrollment_Group__c/CLQ_Enrollment_Group__c.object-meta.xml
<CustomObject>
    <label>Enrollment Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>