force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Lead_Teacher_Text__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Lead_Teacher_Text__c</fullName>
    <label>Lead Teacher 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>