force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_No_of_Infants__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_Infants__c</fullName>
    <inlineHelpText>Birth to &lt; 18 months</inlineHelpText>
    <label>No. of Infants - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>