force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_No_of_Preschool__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_Preschool__c</fullName>
    <description>Full time preschool</description>
    <inlineHelpText>3 years to &lt; Kindergarten</inlineHelpText>
    <label>No. of Preschool - Full Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>