force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_No_of_School_Age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_School_Age__c</fullName>
    <inlineHelpText>Kindergarten to &lt; 15 years</inlineHelpText>
    <label>No. of School Age - Full Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>