force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_No_of_School_Age_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_No_of_School_Age_Part_Time__c</fullName>
    <label>No. of School Age - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>