force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Older_Toddler__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Older_Toddler__c</fullName>
    <inlineHelpText>30 months to &lt; 3 years</inlineHelpText>
    <label>No. of Older Toddler - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>