force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Older_Toddler_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Older_Toddler_Full_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Older Toddler - Full Time</label>
    <type>Checkbox</type>
</CustomField>