force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Original_Enroll_Group__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Original_Enroll_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Group</label>
    <referenceTo>CLQ_Enrollment_Group__c</referenceTo>
    <relationshipLabel>Enrollment Groups</relationshipLabel>
    <relationshipName>Enrollment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>