force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Pre_School__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Pre_School__c</fullName>
    <description>No. of Preschool - Part Time</description>
    <inlineHelpText>3 years to &lt; Kindergarten</inlineHelpText>
    <label>No. of Preschool - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>