force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Room_Space_Inspection__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Space_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room/Space</label>
    <referenceTo>CLQ_Room_Space_Inspection__c</referenceTo>
    <relationshipLabel>Enrollment Groups</relationshipLabel>
    <relationshipName>Enrollment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>