force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_School_Age_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_School_Age_Full_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School Age - Full Time</label>
    <type>Checkbox</type>
</CustomField>