force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment__c</fullName>
    <formula>CLQ_Infant__c  +  CLQ_No_of_Infants__c  +  CLQ_No_of_Older_Toddler__c  +  CLQ_Older_Toddler__c  +  CLQ_No_of_Preschool__c  +  CLQ_Pre_School__c  +  CLQ_No_of_School_Age__c  +  CLQ_No_of_School_Age_Part_Time__c  +  CLQ_No_of_Young_Toddler__c  +  CLQ_Younger_Toddler__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>