force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Total_No_of_Infants__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_No_of_Infants__c</fullName>
    <formula>CLQ_Infant__c +  CLQ_No_of_Infants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total 	 No. of Infants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>