force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Total_No_of_Older_Toddler__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_No_of_Older_Toddler__c</fullName>
    <formula>CLQ_No_of_Older_Toddler__c + CLQ_Older_Toddler__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of Older Toddler</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>