force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Total_No_of_Preschool__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_No_of_Preschool__c</fullName>
    <formula>CLQ_No_of_Preschool__c + CLQ_Pre_School__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of Preschool</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>