force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Total_No_of_School_Age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_No_of_School_Age__c</fullName>
    <formula>CLQ_No_of_School_Age__c +  CLQ_No_of_School_Age_Part_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of School Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>