force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_TotalEnrollment_Under_21_2_yrs_Infan__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TotalEnrollment_Under_21_2_yrs_Infan__c</fullName>
    <formula>CLQ_Infant__c  +  CLQ_No_of_Infants__c  +  CLQ_No_of_Young_Toddler__c  +  CLQ_Younger_Toddler__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Enrollment (Under 2 1/2 yrs)</inlineHelpText>
    <label>Total Enrollment (Under 2 1/2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>