force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/CLQ_Younger_Toddler__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Younger_Toddler__c</fullName>
    <inlineHelpText>18 months to &lt; 30 months</inlineHelpText>
    <label>No. of Young Toddler - Part Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>