force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/Lead_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Lead_Teacher__c</fullName>
    <label>Lead Teacher 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>