force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/Overall_Met_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Overall_Met_Not_Met__c</fullName>
    <label>OCOT Met/Not Met</label>
    <length>10</length>
    <type>Text</type>
</CustomField>