force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CLQ_Program__c</referenceTo>
    <relationshipLabel>Enrollment Groups</relationshipLabel>
    <relationshipName>Enrollment_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>