force-app/main/default/objects/CLQ_Enrollment_Group__c/fields/Recommended_rating__c.field-meta.xml
<CustomField>
    <fullName>Recommended_rating__c</fullName>
    <formula>TEXT(CLQ_Inspection__r.CLQ_Program_Transaction__r.Recommended_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended rating</label>
    <type>Text</type>
</CustomField>